syntax = "proto3";

package calculator;
option go_package="calculator/calculatorpb";

message SumRequest {
    repeated int32 values = 1;
}

message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

service CaculatorService{
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    // Server stream
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest)
        returns (stream PrimeNumberDecompositionResponse) {};
}
